# Caustica

./: .gitignore  DISTRIBUTION_NOTICE.md  LICENSE.md  README.md  RT_RENDERER_PLAN.md  THIRD_PARTY_NOTICES.md  WORKER_POOL_PLAN.md  build.gradle  flake.nix  gradle.properties  runClient.ps1
.github/: alpha-merge-pr.md
.github/workflows/: ci.yml  production-candidate.yml
docs/: developer_guide.md  nrd-linux-amd-merge-candidate.md  offline-benchmark.md  performance-optimization-loop.md  rtx30-compatibility.md  sharc-architecture-and-validation-plan.md  sharc-runtime-validation.md  sharc-sdk-1.6.5.0.md  sharc-torch-optimization-2026-07-16.md  streamline-core-acceptance-2026-07-14.md  streamline-dlssg-integration-plan.md  streamline-sdk-2.12.0.md
native/ngx_shim/: ngx_shim.cpp
native/nrd_bridge/: CMakeLists.txt  nrd_bridge.cpp  nrd_extension_filter.h  nrd_extension_filter_test.cpp
native/streamline_bridge/: CMakeLists.txt  streamline_bridge.cpp  streamline_bridge.h  streamline_bridge_abi_test.cpp  streamline_bridge_production_init_test.cpp  streamline_bridge_resources.h
shaders/display/: bloom.comp  display.comp  dlssd_disocclusion.comp  exposure_hist.comp  fg_ui_alpha.comp  hdr_ui_composite.comp  nrd_resolve.comp  nrd_spatial_upscale.comp  sky_stars.comp.slang  sky_view.comp.slang
shaders/rt/: block_outline.frag  block_outline.vert  display.comp  exposure_hist.comp  name_tag.frag  name_tag.vert  world.guide.rahit  world.rahit  world.rchit  world.rgen  world.rmiss
shaders/sharc/: sharc_atomic_probe.comp.slang  sharc_bridge.slang  sharc_resolve.comp.slang
shaders/world/: offline_schedule.comp.slang  world.rahit.slang  world.rchit  world.rchit.slang  world.rgen  world.rgen.slang  world.rmiss.slang  world_common.slang  world_guide.rmiss.slang  world_layout_probe.slang  world_shadow.rchit.slang  world_shadow.rmiss.slang  world_sky_lut.slang  world_stars.slang
src/main/java/dev/comfyfluffy/candela/mixin/: GameRendererMixin.java
src/main/java/dev/comfyfluffy/candela/rt/: RtComposite.java  RtDeviceBringup.java
src/main/java/dev/comfyfluffy/caustica/: CausticaConfig.java
src/main/java/dev/comfyfluffy/caustica/client/: CapturePause.java  CausticaClient.java  CausticaDebugBridge.java  CausticaJitter.java  CausticaMenuUsage.java  CausticaOptionsScreen.java  CausticaSettingsScreen.java  CausticaTreeState.java  OfflineGroundTruth.java  OfflineRendererHud.java  OfflineTileSchedule.java  RtFrameGenerationDiagnosticsScreen.java  RtFrameGenerationOptionsScreen.java  RtSharcOptionsScreen.java  RtTonemapOptionsScreen.java  RtVideoOptions.java  UltraScreenshot.java  VanillaRenderController.java
src/main/java/dev/comfyfluffy/caustica/mixin/: BlockModelRenderStateMixin.java  GameRendererMixin.java  GuiMixin.java  MinecraftMixin.java  MouseHandlerMixin.java  OptionsMixin.java  TextureAtlasMixin.java  VideoSettingsScreenMixin.java  VulkanBackendMixin.java  VulkanDeviceMixin.java  VulkanGpuSurfaceMixin.java  VulkanInstanceMixin.java
src/main/java/dev/comfyfluffy/caustica/nrd/: NrdLibrary.java  NrdRuntime.java
src/main/java/dev/comfyfluffy/caustica/rt/: AstronomicalSky.java  RtComposite.java  RtContext.java  RtDebugLabels.java  RtDeviceBringup.java  RtFramePresenter.java  RtFrameStats.java  RtGpuExecutor.java  RtHdr.java  RtReflex.java  RtResolutionScale.java  RtRuntimeStatus.java  RtSharcCache.java  RtSharcSupport.java  RtTraceGpuProfiler.java  RtUiOverlay.java  SharcRadianceEncoding.java  TerrainJobOrder.java  VulkanDiagnostics.java
src/main/java/dev/comfyfluffy/caustica/streamline/: StreamlineAbi.java  StreamlineLibrary.java  StreamlineRuntime.java  StreamlineSwapchainCoordinator.java
src/main/java/dev/upscaler/: UpscalerConfig.java
src/main/java/dev/upscaler/client/: DlssPipeline.java  FsrPipeline.java  RtVideoOptions.java  SodiumCompat.java  UpscalerClient.java  VanillaRenderController.java  WorldRenderScaler.java
src/main/java/dev/upscaler/mixin/: GameRendererMixin.java  GuiRendererMixin.java  LevelExtractorMixin.java  MinecraftMixin.java  OptionsMixin.java  OptionsSubScreenAccessor.java  VideoSettingsScreenMixin.java  VulkanBackendMixin.java  VulkanGpuSurfaceMixin.java
src/main/java/dev/upscaler/rt/: RtAccel.java  RtBlockMaterials.java  RtComposite.java  RtDeviceBringup.java  RtDlssRr.java  RtEntities.java  RtEntityCapture.java  RtEntityCollector.java  RtExposure.java  RtHdr.java  RtPipeline.java  RtReflex.java  RtSmokeTest.java  RtTerrain.java  RtUiOverlay.java
src/main/resources/: caustica.mixins.json  fabric.mod.json  upscaler.mixins.json
src/main/resources/assets/caustica/lang/: de_de.json  en_us.json  es_es.json  fr_fr.json  it_it.json  ja_jp.json  ko_kr.json  pt_br.json  ru_ru.json  zh_cn.json  zh_tw.json
src/main/resources/assets/upscaler/lang/: en_us.json
src/main/resources/caustica/: streamline.properties
src/test/java/dev/comfyfluffy/caustica/: CausticaConfigOverridePersistenceTest.java  CausticaConfigSceneMigrationTest.java  CausticaPersonalDefaultsTest.java  ConfigReachabilityContractTest.java  HdrSessionSettingTest.java
tools/: build-fast.ps1  caustica-debug-bridge.ps1  caustica-performance-loop.ps1  fetch-sharc.ps1  repair-prism-dlss-config.ps1  verify-streamline-acceptance.ps1
(+170 files in other folders)
